[gd_scene load_steps=7 format=3 uid="uid://yyuns6yar821"]

[ext_resource type="Script" path="res://Scenes/Minigames/Present/node_3d.gd" id="1_tgx4l"]
[ext_resource type="PackedScene" uid="uid://b0rpug8oir2ks" path="res://Scenes/Entities/Present/3Dpresent.tscn" id="2_242nx"]
[ext_resource type="Script" path="res://Scenes/Entities/Present/3Dpresent.gd" id="3_j14yw"]
[ext_resource type="Material" uid="uid://5q6dqpjkhm6v" path="res://Assets/PLaceholder/present/Materials/Red.tres" id="4_nq5dq"]
[ext_resource type="Material" uid="uid://sysk0xcl723a" path="res://Assets/PLaceholder/present/Materials/Blue.tres" id="5_r6mpq"]
[ext_resource type="Material" uid="uid://b5fdh5bjcgslc" path="res://Assets/PLaceholder/present/Materials/White.tres" id="6_08543"]

[node name="Minigame" type="Node3D"]
script = ExtResource("1_tgx4l")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.44717)
current = true
fov = 38.1731

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, -5.74039, 5.54499, 5.74328)
light_energy = 0.5
light_volumetric_fog_energy = 0.0
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_split_1 = 0.394
directional_shadow_blend_splits = true
directional_shadow_max_distance = 19.0
directional_shadow_pancake_size = 0.1

[node name="Present" parent="." instance=ExtResource("2_242nx")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
script = ExtResource("3_j14yw")
red = ExtResource("4_nq5dq")
blue = ExtResource("5_r6mpq")
white = ExtResource("6_08543")

[connection signal="mouse_entered" from="Present" to="Present" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Present" to="Present" method="_on_mouse_exited"]
